bug fixes: the cards don't jump anymore, the emptystate for step doesnt overlap anymore, the fullscreen doesnt block modals anymore and some other smaller ones

--- a/webapp/src/react/global-styles/app.scss
+++ b/webapp/src/react/global-styles/app.scss
@@ -26,6 +26,7 @@
   @include size(100%);
   @include flexContainer('column');
   overflow: hidden;
+  z-index: 1;
 
   &__app {
     @include size(100%);
